Add CarSounds and CarSuit LocalScripts to character scripts

--- a/default.project.json
+++ b/default.project.json
@@ -10,6 +10,9 @@
     "StarterPlayer": {
       "StarterPlayerScripts": {
         "$path": "src/client"
+      },
+      "StarterCharacterScripts": {
+        "$path": "src/character"
       }
     }
   }
