feat: Add Shared module for car configurations and update related imports

--- a/default.project.json
+++ b/default.project.json
@@ -3,6 +3,13 @@
   "tree": {
     "$className": "DataModel",
 
+    "ReplicatedStorage": {
+      "$className": "ReplicatedStorage",
+      "Shared": {
+        "$path": "src/shared"
+      }
+    },
+
     "ServerScriptService": {
       "$path": "src/server"
     },
